# moonlight-harmony

./: .gitattributes  .gitignore  .gitmodules  APP_DESCRIPTION.md  DECODE_LATENCY_ANALYSIS.md  GAMEPAD_MAPPING_TEST.md  MIGRATION_GUIDE.md  OPEN_SOURCE_LICENSES.md  PRIVACY_POLICY.md  README.md  build-profile.json5  build-profile.json5.example  hvigorfile.ts  hvigorw  hvigorw.bat  hvigorw.js  oh-package.json5
.github/workflows/: build.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_icon.json
ci/: normalize-sdk.sh  patch-sdk.sh
ci/sdk-stubs/: aubio-config.h  display-brightness-patch.d.ts  externalconfig.json  kit.NetworkKit.d.ts  kit.RemoteCommunicationKit.d.ts  kit.RemoteCommunicationKit.json  ohos.net.rcp.d.ts  ohos.net.socket.d.ts
docs/: ARKUI_TOUCH_HANDLING_LESSONS.md  CROWN_FEATURE_ANALYSIS.md
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/common/: Changelog.ets  NetworkConstants.ets  OverlayConstants.ets  Theme.ets
entry/src/main/ets/components/: AnalogStick.ets  AppCard.ets  BackgroundImage.ets  ComputerCard.ets  ConfirmDialog.ets  CustomKeyOverlay.ets  GameControllerTestView.ets  GameMenuDialog.ets  InlineSegmentPicker.ets  MultiOptionPickerDialog.ets  OptionPicker.ets  OptionPickerDialog.ets  PcListDialogs.ets  PcListTitleBar.ets  PerformanceOverlay.ets  PerformanceOverlayManager.ets  SensorTestView.ets  SettingSlider.ets  ShortcutEditorDialog.ets  ShortcutManager.ets  StreamMenuManager.ets  UsbControllerTestView.ets  VirtualController.ets  VirtualControllerV2.ets  VirtualJoystick.ets  VirtualKeyboard.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: AppInfo.ets  ComputerInfo.ets  InputEvent.ets  StreamConfig.ets
entry/src/main/ets/pages/: AddPcPage.ets  AddPcPageV2.ets  AppListPage.ets  AppListPageV2.ets  ControllerTestPage.ets  Index.ets  PcListPage.ets  PcListPageV2.ets  SettingsPage.ets  SettingsPageV2.ets  StreamIMEManager.ets  StreamInputHandler.ets  StreamLifecycleManager.ets  StreamPage.ets
entry/src/main/ets/service/: AppStateService.ets  AudioVibrationService.ets  BackgroundStreamService.ets  ComputerManager.ets  ComputerPersistence.ets  CustomKeyManager.ets  CustomKeyStore.ets  CustomKeyTypes.ets  DeviceSensorService.ets  GameControllerService.ets  GamepadManager.ets  GamepadTypes.ets  GamepadVibrationService.ets  GyroAssistService.ets  InputInterceptorService.ets  KeyboardTranslator.ets  LocalCursorManager.ets  MdnsDiscovery.ets  MoonBridge.ets  MouseEmulationService.ets  NvComputer.ets  NvHttp.ets  PairingManager.ets  SettingsService.ets  StreamWindowManager.ets  StreamingService.ets  StreamingSession.ets  TouchInputHandler.ets  WakeOnLan.ets
entry/src/main/ets/service/microphone/: MicrophoneCapturer.ets  MicrophoneConfig.ets  MicrophoneManager.ets  MicrophoneStream.ets  index.ets
entry/src/main/ets/service/usbdriver/: AbstractController.ets  AbstractDualSenseController.ets  AbstractXboxController.ets  ControllerConstants.ets  DdkUsbPoller.ets  DualSenseController.ets  Dualshock4Controller.ets  GenericHidController.ets  NativeGamepad.ets  NativeHidController.ets  NativeHidParserService.ets  SwitchProController.ets  UsbDriverListener.ets  UsbDriverService.ets  UsbErrorCodes.ets  Xbox360Controller.ets  XboxOneController.ets  index.ets
entry/src/main/ets/services/: StreamingService.ets
entry/src/main/ets/utils/: BackgroundImageUtil.ets  ComputerMenuHelper.ets  CryptoUtil.ets  HttpClient.ets  NetHelper.ets  PcListActions.ets  PreferencesUtil.ets  StringUtil.ets  XmlUtil.ets
entry/src/main/ets/viewmodel/: AppViewModel.ets  ComputerMenuHelper.ets  ComputerViewModel.ets  PcListActions.ets  StreamViewModel.ets
entry/src/main/resources/base/element/: color.json  float.json  string.json
entry/src/main/resources/base/media/: layered_icon.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/rawfile/: CHANGELOG.md
hvigor/: .npmrc  hvigor-config.json5  package.json
nativelib/: build-profile.json5  hvigorfile.ts  oh-package.json5
nativelib/src/main/: module.json5
nativelib/src/main/cpp/: CMakeLists.txt  aubio_onset_detector.h  aubio_onset_wrapper.h  audio_decoder.cpp  audio_decoder.h  audio_renderer.cpp  audio_renderer.h  bass_energy_analyzer.h  callbacks.cpp  callbacks.h  game_controller_native.cpp  game_controller_native.h  gamepad_napi.cpp  gamepad_napi.h  input_handler.cpp  input_handler.h  input_interceptor.cpp  input_interceptor.h  mic_capturer.cpp  mic_capturer.h  moonlight_bridge.cpp  moonlight_bridge.h  mouse_interceptor.cpp  mouse_interceptor.h  napi_init.cpp  native_render.cpp  native_render.h  native_vibrator.cpp  native_vibrator.h  opus_avcodec.cpp  opus_avcodec.h  opus_encoder.cpp  opus_encoder.h  opus_libopus.cpp  opus_libopus.h  sdl_gamecontrollerdb.cpp  sdl_gamecontrollerdb.h  sdl_gamecontrollerdb_data.h  usb_ddk_poller.cpp  usb_ddk_poller.h  (+4 more)
nativelib/src/main/cpp/ohos_shim/: assert.h
nativelib/src/main/cpp/sdl3/: gamepad_manager.cpp  gamepad_manager.h
nativelib/src/main/ets/: Index.ets
nativelib/src/main/resources/base/element/: string.json
